# static

./: .gitignore  README.md  build.sh  main.py  main.spec  pyproject.toml  requirements.txt  rip.py
