[project]
name = "static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "appdirs>=1.4.4",
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "pyinstaller>=6.16.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "sanitize-filename>=1.2.0",
    "youtube-search>=2.1.2",
    "yt-dlp>=2025.6.30",
]
